#
#
AC_INIT([AspellGUI],[0.0.8],[PROJ],[AspellGUI])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

PKG_PROG_PKG_CONFIG

AC_ARG_ENABLE(qt5,[  --enable-qt5		Enable QT5.],[enable_qt5=$enableval],[enable_qt5="no"])
if test $enable_qt5 = "yes" ;then
	QTWIDGETS_MODULES="Qt5Widgets >= 5.2.1"
	PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)
	AC_SUBST(QTWIDGETS_CFLAGS)
	AC_SUBST(QTWIDGETS_LIBS)
	AC_DEFINE([_USEQT5_], [], [Build Qt5])
else
	GTK_MODULES="gtk+-2.0 >= 2.24.0"
	PKG_CHECK_MODULES(GTK, $GTK_MODULES)
	AC_SUBST(GTK_CFLAGS)
	AC_SUBST(GTK_LIBS)
fi

AM_CONDITIONAL([USEQT5], [test x$enable_qt5 = "xyes"])

GLIB_MODULES="glib-2.0 >= 2.34.1"
PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

ASPELL_LIBS=-laspell
AC_SUBST(ASPELL_LIBS)

AC_OUTPUT(Makefile AspellGUI/app/Makefile)

