#
#
AC_INIT([AspellGUI],[0.1.0],[PROJ],[AspellGUI])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

PKG_PROG_PKG_CONFIG

QTWIDGETS_MODULES="Qt6Widgets >= 6.10.0"
PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)
AC_SUBST(QTWIDGETS_CFLAGS)
AC_SUBST(QTWIDGETS_LIBS)

ASPELL_LIBS=-laspell
AC_SUBST(ASPELL_LIBS)

AC_OUTPUT(Makefile AspellGUI/app/Makefile)

